syntax = "proto3";

package request_models;

message GameSessionEndedRequestModel {}